<resources>
    <string name="app_name">VolumeUp</string>
    <string name="some_string">Text shown here</string>
    <string name="off">Off</string>
    <string name="texthere">TextHere</string>
    <string name="amplitude_here">Amplitude Here</string>
    <string name="amplitude">Amplitude Threshold:</string>
    <string name="textview">Feedback Volume:</string>
    <string name="_10">10</string>
    <string name="_0">0</string>
    <string name="amplitude2">Amplitude (dB):</string>
    <string name="speech_detected">Speech Detected:</string>

</resources>